[package]
name = "aspie-lib"
version = "0.1.0"
authors = ["Jordan Morris <jtmorrisbytes@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch="wasm32")'.features]
default = ["console_error_panic_hook"]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
web-sys = {version="0.3.45",features=["console"]}
js-sys = {version="0.3.45"}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"
[target.'cfg(target_arch="wasm32")'.profile.release]
# Tell `rustc` to optimize for small code size.
# [features]
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }


[dependencies]
serde = {version="1.0.117",features=["derive"]}

# [dev-dependencies]

[profile.release]
opt-level = "s"
